--- a/1.21.11/resource pack/assets/wander/models/item/hugeasssword.json
+++ b/1.21.11/resource pack/assets/wander/models/item/hugeasssword.json
@@ -1,4 +1,5 @@
 {
+	"format_version": "1.21.6",
 	"credit": "Made by Openvoxel Studios",
 	"texture_size": [64, 64],
 	"textures": {
@@ -200,9 +201,9 @@
 			"scale": [0.8, 0.8, 0.8]
 		},
 		"fixed": {
-			"rotation": [90, 49.75, -90],
-			"translation": [-1, 0, 1],
-			"scale": [0.5, 0.5, 0.5]
+			"rotation": [90.33, 49.65, -90.16],
+			"translation": [-1, 0, -0.25],
+			"scale": [1.5, 1.5, 1.5]
 		}
 	},
 	"groups": [
